[project]
name = "42-ftl-quantum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "pennylane>=0.43.2",
    "pennylane-qiskit>=0.43.0",
    "plotly>=6.5.0",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.41.1",
]
